objects/SPM_PVendor_MVendor__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>PVendor__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Sales__c</fullName>
        <description>Last 4 Quarters Revenue (based on SBI)</description>
        <inlineHelpText>Enter Last 4 Quarters Revenue (based on SBI)</inlineHelpText>
        <label>Actual Sales ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Care_Ticket_Percent_Last_Quarter__c</fullName>
        <label>Care Ticket Percent - Last Quarter</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_Percent_Last_Quarter__c</fullName>
        <label>Conversion Rate Percent - Last Quarter</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Delinquency_Predictor__c</fullName>
        <label>Current Delinquency Predictor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_Percent_Last_Quarter__c</fullName>
        <label>Cycle Time Percent - Last Quarter</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <label>Doing Business As</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA__c</fullName>
        <label>EPA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Total_Provider_Revenue_Inc_HD__c</fullName>
        <label>Est. Total Provider Revenue (Inc. HD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_of_Business_with_Home_Depot__c</fullName>
        <label>Estimated % of Business with Home Depot</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financial_Stress_Score__c</fullName>
        <label>Financial Stress Score</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HD_Pro_Spend_Last_4_quarters__c</fullName>
        <label>HD Pro Spend - Last 4 quarters</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Depot_Revenue_Last_4_Quarters__c</fullName>
        <label>Home Depot Revenue – Last 4 Quarters</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IVOC_Number_Last_Quarter__c</fullName>
        <label>IVOC Number - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Audit__c</fullName>
        <label>Insurance Audit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_expiration__c</fullName>
        <label>Insurance expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Audit__c</fullName>
        <label>License Audit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MVendorAccount__c</fullName>
        <formula>HYPERLINK(&quot;https://cs52.salesforce.com/&quot;&amp;Id, MVendor_Account_Number__c,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MVendorAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVendor_Account_Number__c</fullName>
        <label>MVendor Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVendor_Name__c</fullName>
        <description>MVendor Name</description>
        <formula>PVendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MVendor Name</inlineHelpText>
        <label>MVendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVendor_Number__c</fullName>
        <description>Account Number</description>
        <formula>PVendor__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Number</inlineHelpText>
        <label>MVendor#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Change__c</fullName>
        <label>Need Change</label>
        <picklist>
            <picklistValues>
                <fullName>Better</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_badge_No_background__c</fullName>
        <label>No badge No background</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVendor__c</fullName>
        <description>PVendor</description>
        <inlineHelpText>Select / Enter PVendor</inlineHelpText>
        <label>PVendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MVendors</relationshipLabel>
        <relationshipName>PVendor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; PVendor__r.Id,PVendor__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paydex_Number__c</fullName>
        <label>Paydex Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permit_Audit__c</fullName>
        <label>Permit Audit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Delinquency_Predictor__c</fullName>
        <label>Previous Delinquency Predictor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_for_Growth__c</fullName>
        <label>Program for Growth</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBI_Care_Ticket_Score_Last_Quarter__c</fullName>
        <label>SBI Care Ticket Score - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_Cycle_Time_Score_Last_Quarter__c</fullName>
        <label>SBI Cycle Time Score - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_IVOC_Score_Last_Quarter__c</fullName>
        <label>SBI IVOC Score - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_Overall_Score_Last_Quarter__c</fullName>
        <label>SBI Overall Score - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_Sales_Score_Last_Quarter__c</fullName>
        <label>SBI Sales Score - Last Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBI_Score_Last_Quarter__c</fullName>
        <description>Last Quarter SBI Score</description>
        <inlineHelpText>Enter Last Quarter SBI Score</inlineHelpText>
        <label>SBI Score - Last Quarter</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_Review_Recommendation__c</fullName>
        <label>SP Review Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Grow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Dollar_Last_Quarter__c</fullName>
        <label>Sales Dollar - Last Quarter</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Source Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Risk_Evaluation__c</fullName>
        <label>Supplier Risk Evaluation</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Stability_Index__c</fullName>
        <label>Supplier Stability Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestMVendor__c</fullName>
        <formula>PVendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestMVendor#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_badged_employees__c</fullName>
        <label>Total badged employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>